# Qt

cost/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
estimated_cost/: CMakeLists.txt  Readme.md  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
estimated_cost/data/: Robot Estimate Cost - Sheet1.csv
robotcalculator/: CMakeLists.txt  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  thirddialog.ui
simpletop/: CMakeLists.txt  Readme.md  dialog.cpp  image.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  pid.cpp  pid.h  pid.ui  secdialog.cpp  secdialog.h  secdialog.ui  thirddialog.cpp  thirddialog.h  variable.h
